# mkdocs-sysmlv2

./: .gitignore  .pdm-python  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: mkdocs.yml
docs/docs/: build-info.md
example/: mkdocs.yml
example/docs/: index.md
example/docs/diagrams/src/: batmobile.sysml
src/mkdocs_sysmlv2/: __init__.py  model.py  parser.py  plugin.py  renderer.py
